--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node server/index"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/DeividasKaraliunas/galutinis-bandomasis/issues"
   },
-  "homepage": "https://github.com/DeividasKaraliunas/galutinis-bandomasis#readme"
+  "homepage": "https://github.com/DeividasKaraliunas/galutinis-bandomasis#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
